<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/bg_lumora_gradient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView style="@style/Lumora.Title"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/legal_title" />

        <Button android:id="@+id/sectionTerms"
            style="@style/Lumora.GhostButton"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/legal_section_terms" />

        <Button android:id="@+id/sectionPrivacy"
            style="@style/Lumora.GhostButton"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/legal_section_privacy" />

        <Button android:id="@+id/sectionSafety"
            style="@style/Lumora.GhostButton"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/legal_section_safety" />

        <Button android:id="@+id/sectionDisclaimer"
            style="@style/Lumora.GhostButton"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/legal_section_disclaimer" />

        <Button android:id="@+id/sectionLicenses"
            style="@style/Lumora.GhostButton"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/legal_section_licenses" />

        <Button android:id="@+id/sectionConsent"
            style="@style/Lumora.PrimaryButton"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/legal_section_consent" />
    </LinearLayout>
</ScrollView>
